# quran-video-maker-ffmpeg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  config.json  data.tar  segments_002.json
.github/workflows/: cmake-cross-platform.yml  install-smoke.yml  release.yml  update-package-managers.yml
Formula/: qvm-ffmpeg.rb
homebrew/Formula/: qvm-ffmpeg.rb
metadata/: long-verses.json  surah-themes.json
scoop/: qvm.json
src/: LiveApiClient.cpp  LiveApiClient.h  SystemProcessExecutor.cpp  SystemProcessExecutor.h  api.cpp  api.h  background_video_manager.cpp  background_video_manager.h  config_loader.cpp  localization_utils.cpp  localization_utils.h  main.cpp  metadata_generator.cpp  metadata_generator.h  metadata_writer.cpp  metadata_writer.h  quran_data.h  r2_client.cpp  r2_client.h  recitation_utils.cpp  recitation_utils.h  subtitle_builder.cpp  subtitle_builder.h  types.h  verse_segmentation.cpp  verse_segmentation.h  video_generator.cpp  video_generator.h  video_selector.cpp  video_selector.h
src/audio/: custom_audio_processor.cpp
src/interfaces/: IApiClient.h  IProcessExecutor.h
src/text/: text_layout.cpp  text_layout.h
tests/: MockApiClient.h  MockProcessExecutor.h  mock_api_response.json  test_reciter_listing.cpp  unit_tests.cpp
